possible video stretch fix

--- a/src/styles/quiz/layouts.module.scss
+++ b/src/styles/quiz/layouts.module.scss
@@ -1,6 +1,7 @@
 .media {
   img,
   video {
+    @extend %cover;
     width: toRem(1900);
     height: toRem(1200);
   }
